// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> renders correctly 1`] = `
<DocumentFragment>
  <button
    aria-label="close-button"
    class="chakra-button css-ejr22g"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-kpbtv0"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
      />
    </svg>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<CloseButton /> renders correctly with size lg: CloseButton-lg 1`] = `
<DocumentFragment>
  <button
    aria-label="close-button"
    class="chakra-button css-6whudu"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-kpbtv0"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
      />
    </svg>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<CloseButton /> renders correctly with size md: CloseButton-md 1`] = `
<DocumentFragment>
  <button
    aria-label="close-button"
    class="chakra-button css-ejr22g"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-kpbtv0"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
      />
    </svg>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<CloseButton /> renders correctly with size sm: CloseButton-sm 1`] = `
<DocumentFragment>
  <button
    aria-label="close-button"
    class="chakra-button css-rlzu75"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-kpbtv0"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z"
      />
    </svg>
  </button>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
